[package]
name = "jpeg_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.4", features = ["jpeg"] }
mozjpeg = { version = "0.9.4", features = ["with_simd"] }
turbojpeg = { version = "0.5.2", features = ["image"] }
zune-jpeg = "0.2.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "image"
harness = false
